--- a/myapp/public/css/style.css
+++ b/myapp/public/css/style.css
@@ -1,18 +1,35 @@
 main > .container {
   padding: 60px 15px 0;
 }
+.table-wrap{
+  width: 80%;
+  box-shadow: 5px 10px 20px rgba(0,0,0,0.25);
+}
 table {
-  width: 80%!important;
   text-align: center;
+  margin-bottom: 0!important;
 }
 tr {
   border-width: 0 0 1px!important;
 }
+.process-table tbody td {
+  transition: all  0.5s ease;
+}
+.process-table tbody td:hover {
+  background-color: #c9ffe6;
+}
+.process-table tbody td.base {
+  background-color: yellow;
+}
 .process-table tbody tr:first-child td:first-of-type {
   background-color: rgb(132, 214, 155);
 }
-.base {
-  background-color: yellow!important;
+.process-table .row {
+  flex-wrap: nowrap;
+}
+.process-table .col {
+  min-width: 250px;
+  flex: 1 0 250px!important;
 }
 ._sticky {
   position: sticky;
